infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
  labels:
    app: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: mahmoudyahia/orders
          ports:
            - containerPort: 80

#kubectl create secret generic jwt-secret --from-literal=JWT_KEY=asdf
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: orders-port
      protocol: TCP
      port: 3000
      targetPort: 3000
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: orders-depl
#   labels:
#     app: orders
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: orders
#   template:
#     metadata:
#       labels:
#         app: orders
#     spec:
#       containers:
#         - name: orders
#           image: mahmoudyahia/orders
#           env:
#             - name: NATS_CLIENT_ID
#               value: "orders-service"
#             - name: NATS_CLUSTER_ID
#               value: "ticketing"
#             - name: NATS_URL
#               value: "http://nats-srv:4222"
#             - name: MONGO_URI
#               value: "mongodb://orders-mongo-srv:27017/orders"
#             - name: JWT_KEY
#               valueFrom:
#                 secretKeyRef:
#                   name: jwt-secret
#                   key: JWT_KEY
#           ports:
#             - containerPort: 3000
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: orders-srv
# spec:
#   selector:
#     app: orders
#   ports:
#     - name: orders-port
#       protocol: TCP
#       port: 3000
#       targetPort: 3000
